chore: show selected archived activity, add tooltip to archived activity analytics view

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5299,5 +5299,6 @@
   "inviteYourFriends": "Invite your friends",
   "playWithAI": "Play with AI for now",
   "courseStartDesc": "Pangea Bot is ready to go anytime!\n\n...but learning is better with friends!",
-  "activityDropdownDesc": "When you’re done with this activity, click below"
+  "activityDropdownDesc": "When you’re done with this activity, click below",
+  "activityAnalyticsListBody": "These are your completed activities! After finishing activities, you can view them here."
 }
