--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5300,5 +5300,6 @@
   "playWithAI": "Play with AI for now",
   "courseStartDesc": "Pangea Bot is ready to go anytime!\n\n...but learning is better with friends!",
   "activityDropdownDesc": "When you’re done with this activity, click below",
-  "activityAnalyticsListBody": "These are your completed activities! After finishing activities, you can view them here."
+  "activityAnalyticsListBody": "These are your completed activities! After finishing activities, you can view them here.",
+  "emptyChatSearch": "No DMs or chats found. Make sure your search is spelled correctly."
 }
