--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5303,5 +5303,7 @@
   "activityDropdownDesc": "When you’re done with this activity, click below",
   "activityAnalyticsListBody": "These are your completed activities! After finishing activities, you can view them here.",
   "languageMismatchTitle": "Language mismatch",
-  "languageMismatchDesc": "Your target language doesn't match the language of this activity. Update your target language?"
+  "languageMismatchDesc": "Your target language doesn't match the language of this activity. Update your target language?",
+  "noPublicCoursesFound": "No public courses found. Would you like to create one?",
+  "noCourseTemplatesFound": "We couldn't find any courses for your target language. You can chat with Pangea Bot in the meantime, and check back later for more courses."
 }
