--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5308,5 +5308,6 @@
   "tokenInfoFeedbackDialogTitle": "Word Information Feedback",
   "tokenInfoFeedbackDialogDesc": "AI makes mistakes. Please describe any issues you found with the information above.",
   "noPublicCoursesFound": "No public courses found. Would you like to create one?",
-  "noCourseTemplatesFound": "We couldn't find any courses for your target language. You can chat with Pangea Bot in the meantime, and check back later for more courses."
+  "noCourseTemplatesFound": "We couldn't find any courses for your target language. You can chat with Pangea Bot in the meantime, and check back later for more courses.",
+  "contactHasBeenInvitedToTheCourse": "Contact has been invited to the course"
 }
