chore: on invite, also invite to course parent

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5166,7 +5166,8 @@
   },
   "pingParticipants": "Ping course participants",
   "playWithBot": "Play with Pangea Bot",
-  "inviteFriends": "Invite friends",
+  "inviteFriendsToActivity": "Invite friends to activity",
+  "inviteFriendsToActivityCourse": "Invite friends to activity and course",
   "waitNotDone": "Wait I’m not done!",
   "waitingForOthersToFinish": "Waiting for the rest to finish up...",
   "saveToCompletedActivities": "Save to completed activities",
