fix: prevent overflows in token info feedback dialog on mobile, add more specific unsubscribed error in future loading dialog

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5310,5 +5310,6 @@
   "tokenInfoFeedbackDialogDesc": "AI makes mistakes. Please describe any issues you found with the information above.",
   "noPublicCoursesFound": "No public courses found. Would you like to create one?",
   "noCourseTemplatesFound": "We couldn't find any courses for your target language. You can chat with Pangea Bot in the meantime, and check back later for more courses.",
-  "botActivityJoinFailMessage": "Pangea Bot is taking a while to respond. Please try again later, or invite a friend."
+  "botActivityJoinFailMessage": "Pangea Bot is taking a while to respond. Please try again later, or invite a friend.",
+  "unsubscribedResponseError": "This feature requires a subscription"
 }
