--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5312,5 +5312,7 @@
   "noCourseTemplatesFound": "We couldn't find any courses for your target language. You can chat with Pangea Bot in the meantime, and check back later for more courses.",
   "botActivityJoinFailMessage": "Pangea Bot is taking a while to respond. Please try again later, or invite a friend.",
   "unsubscribedResponseError": "This feature requires a subscription",
-  "leaveDesc": "Leave this space and all chats within it"
+  "leaveDesc": "Leave this space and all chats within it",
+  "selectAll": "Select all",
+  "deselectAll": "Deselect all"
 }
