--- a/lib/l10n/intl_da.arb
+++ b/lib/l10n/intl_da.arb
@@ -4400,7 +4400,9 @@
   "@unreadChats": {
     "type": "String",
     "placeholders": {
-      "unreadCount": {}
+      "unreadCount": {
+        "type": "int"
+      }
     }
   },
   "@userAndOthersAreTyping": {
