--- a/lib/l10n/intl_el.arb
+++ b/lib/l10n/intl_el.arb
@@ -929,7 +929,9 @@
   "@unreadChats": {
     "type": "String",
     "placeholders": {
-      "unreadCount": {}
+      "unreadCount": {
+        "type": "int"
+      }
     }
   },
   "@rejectedTheInvitation": {
