--- a/lib/l10n/intl_te.arb
+++ b/lib/l10n/intl_te.arb
@@ -4430,7 +4430,9 @@
   "@unreadChats": {
     "type": "String",
     "placeholders": {
-      "unreadCount": {}
+      "unreadCount": {
+        "type": "int"
+      }
     }
   },
   "@userAndOthersAreTyping": {
