--- a/lib/l10n/intl_th.arb
+++ b/lib/l10n/intl_th.arb
@@ -1088,7 +1088,9 @@
   "@unreadChats": {
     "type": "String",
     "placeholders": {
-      "unreadCount": {}
+      "unreadCount": {
+        "type": "int"
+      }
     }
   },
   "@rejectedTheInvitation": {
