--- a/lib/l10n/intl_he.arb
+++ b/lib/l10n/intl_he.arb
@@ -4395,7 +4395,9 @@
   "@unreadChats": {
     "type": "String",
     "placeholders": {
-      "unreadCount": {}
+      "unreadCount": {
+        "type": "int"
+      }
     }
   },
   "@userAndOthersAreTyping": {
